# fusion

./: Cargo.toml  README.md
.codex/: AGENTS.md
src/: error.rs  lib.rs  main.rs
src/cli/: llm.rs  mod.rs
src/cli/commands/: config.rs  health.rs  lifecycle.rs  mod.rs  shared.rs
src/cli/run/: command.rs  mod.rs  openai.rs
src/core/: env.rs  health.rs  mod.rs  paths.rs  process.rs  services.rs  test_support.rs
src/core/config/: mlx.rs  mod.rs  ollama.rs
tests/: cli_commands.rs  config_commands.rs  health_commands.rs  llm_commands.rs  run_commands.rs  service_lifecycle.rs
tests/common/: mod.rs
