[package]
name = "fusion"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
sysinfo = { version = "0.30", default-features = true }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
serial_test = "3.1"
tempfile = "3.10"
