[package]
name = "fusion"
version = "1.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = { version = "0.30", default-features = true }
toml = "0.8"
toml_edit = "0.22"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
serial_test = "3.1"
tempfile = "3.10"
